syntax = "proto3";

package simpletracker;

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    bool success = 1;
    CreateUserErrorReason error_reason = 2;
}

enum CreateUserErrorReason {
    USER_ALREADY_EXISTS = 0;
    INTERNAL_SERVER_ERROR = 1;
}